nav, header, and newtweet areas styled with css

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,6 +3,10 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+:root {
+  --black:  #545149;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -15,11 +19,23 @@ html {
  */
 
 body {
-  color: #545149;
+  color: var(--black);
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
+  
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+main {
+  width: 90%;
+  margin: 0 auto;
+  color: white;
+  font-weight: 300;
+  /* background-color: inherit; */
+  /* background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png"); */
+}
