minor tweak in new-tweet.css to change orientation of input. max length of text area in html removed

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,13 +8,14 @@
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
   
 }
 
 .new-tweet__input textarea{
   flex:1;
   box-sizing: border-box;
+  
   resize: none;
   background: inherit;
   border: none;
