old tweets have hover working. icons need some more work

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,8 @@
-header {
-  height: 400px;
+header.banner {
+
+  height: 500px;
   width: 100%;
+  
 /* 
   The header should have a height of 400px and be 100% the width of it's parent container
   The avatar should be centered vertically and horizontally (Hint: the justify-content and align-items properties are helpful for centering things if you're using Flexbox.)
@@ -17,3 +19,10 @@ header {
 
 }
 
+header.banner img {
+  padding-top: 2em;
+}
+
+header.banner h2 {
+  padding-bottom: 0.5em;
+}
