--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 :root {
   --black:  #545149;
+  --blue:  #4056A1;
 }
 
 html {
@@ -20,7 +21,7 @@ html {
 
 body {
   color: var(--black);
-  background-color: #f4f1ec;
+  background-color: #f9f9f9;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
   background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
@@ -36,6 +37,8 @@ main {
   margin: 0 auto;
   color: white;
   font-weight: 300;
-  /* background-color: inherit; */
-  /* background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png"); */
+  background-color: inherit;
+  background-image: inherit;
+  display: flex;
+  flex-direction: column;
 }
