--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,5 @@
 .new-tweet {
+  padding-top: 1em;
   color: var(--black);
   font-size: 1.5em;
 }
@@ -25,7 +26,7 @@
 .new-tweet button {
   /* margin: 0.5em; */
   font-family: Bungee, cursive;
-  background-color: #4056A1;
+  background-color: var(--blue);
   color: white;
 }
 
@@ -44,3 +45,65 @@
 .over-limit {
   color: rgb(255,0,0);
 }
+
+.old-tweets-container {
+  padding-top: 1em;
+}
+
+article.tweet {
+  border: 4px solid var(--black);
+  margin-top: 2em;
+  padding: 1em;
+  color: var(--black);
+}
+
+article.tweet:hover {
+  box-shadow: 7px 7px 8px 3px var(--black);
+}
+
+article.tweet header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+article.tweet i {
+  font-size: 1.5em;
+}
+
+article.tweet .handle {
+  color: var(--blue);
+}
+
+article.tweet .old-tweet-text {
+  color: var(--black);
+  padding-bottom: 1em;
+  border-bottom: 4px solid var(--black);
+}
+
+
+article.tweet main {
+  margin: 0;
+  width: 100%
+}
+
+article.tweet footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  
+}
+
+article.tweet .timestamp {
+  margin: 0 auto 0 0;
+}
+
+article.tweet footer i {
+  margin: 4px;
+  
+}
+/* .old-tweets-container {
+  background-color: inherit;
+  background-color: inherit;
+} */
