--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,13 +1,16 @@
 nav {
+  position: sticky;
+  top: 0;
+
   height: 120px;
-  width: 100vw;
+  width: 100%;
   background-color: #4056A1;
   background-image: inherit;
   color: white;
   padding: 1.5em;
   display: flex;
   justify-content: space-between;
-
+  z-index: 1;
 /* 
   Be 120 pixels in height
   Be the full width of the viewport.
