--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,7 +21,7 @@ html {
 
 body {
   color: var(--black);
-  background-color: #f9f9f9;
+  background-color: white;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
   background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
@@ -41,4 +41,27 @@ main {
   background-image: inherit;
   display: flex;
   flex-direction: column;
+}
+
+body > footer {
+  height: 8em;
+  font-family: Bungee, cursive;
+  color:  #f9f9f9;
+  background-color: var(--black);
+  background-image: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+body > footer > p {
+  margin: 0.5em;
+  color: var(--blue);
+}
+
+body > footer > p > a {
+  text-decoration: none;
+  color: white;
+  opacity: 0.5;
 }
