--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -46,8 +46,10 @@
   color: rgb(255,0,0);
 }
 
+/* OLD TWEETS CONTAINER */
+
 .old-tweets-container {
-  padding-top: 1em;
+  padding: 1em 0;
 }
 
 article.tweet {
@@ -60,7 +62,8 @@ article.tweet {
 
 article.tweet:hover {
   box-shadow: 7px 7px 8px 3px var(--black);
-  opacity: 1.0;
+  background-color:  #f9f9f9;
+  opacity: 0.8;
 }
 
 .hide {
@@ -73,17 +76,19 @@ article.tweet:hover .hide {
 
 article.tweet header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
-article.tweet i {
-  font-size: 1.5em;
+article.tweet img {
+  width: 2em;
+  margin-right: 0.5em;
 
 }
 
 article.tweet .handle {
   color: var(--blue);
+  margin-left: auto;
 }
 
 article.tweet .old-tweet-text {
