new tweet functionality is looking good. tweet order seems correct

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,7 +21,9 @@
   border: none;
   outline: none;
 
-  font-family: Bungee, cursive;
+  font-family:'Source Sans Pro', sans-serif;
+  font-weight: 700;
+
 }
 
 #tweet-text:required {
