tweaks to css. added icon in nav prompt.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,7 +13,7 @@ header.banner {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(255, 181, 15, 89);
+  background-color: var(--orange);
   background-image: inherit;
 
 }
