--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -26,3 +26,13 @@ nav {
   font-size: 2em;
 
  }
+
+ nav .nav-prompt {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ nav i {
+   color: var(--orange);
+ }
