--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -24,6 +24,7 @@
   font-family:'Source Sans Pro', sans-serif;
   font-weight: 700;
 
+
 }
 
 #tweet-text:required {
@@ -48,6 +49,49 @@
 .new-tweet__counter output{
   font-family: Bungee, cursive;
   
+}
+
+#alert {
+  /* height: 3em; */
+  margin: 0.5em;
+  border: 4px solid Red;
+  background-color: rgb(255, 145, 145);
+  opacity: 0.85;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#alert p {
+  color: black;
+  font-size: 1em;
+  margin: 0;
+
+}
+
+#alert button {
+  font-family: Bungee, cursive;
+  background-color: white;
+  color: var(--black);
+  width: 2em;
+
+}
+
+.hideAlert {
+  visibility: hidden;
+  opacity: 0;
+  height: 0px;
+  transition: visibility 0.5s;
+  transition: height 0.5s;
+}
+
+.showAlert {
+  visibility: visible;
+  height: 4em;
+  opacity: 1;
+  transition: visibility 0.5s;
+  transition: height 300ms;
 }
 
 .over-limit {
