breakpoint established. display none used for alert

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,7 +33,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-main {
+body > main {
   width: 90%;
   margin: 0 auto;
   color: white;
@@ -67,3 +67,4 @@ body > footer > p > a {
   color: white;
   opacity: 0.5;
 }
+
