--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
 
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
+  background-color: var(--orange);
   background-image: inherit;
   color: white;
   padding: 1.5em;
@@ -24,7 +24,7 @@ nav {
 #title {
   font-family: 'Bungee', cursive;
   font-size: 2em;
-
+  color: var(--blue);
  }
 
  nav .nav-prompt {
@@ -34,5 +34,5 @@ nav {
  }
 
  nav i {
-   color: var(--orange);
+   color: var(--blue);
  }
