--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -25,6 +25,8 @@
   margin: 0.5em;
   border: 4px solid Red;
   background-color: rgb(255, 145, 145);
+  height: 0px;
+  transition: height 0.5s;
   opacity: 0.85;
   display: none;
 }
