--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,7 +6,7 @@ nav {
   width: 100%;
   background-color: var(--orange);
   background-image: inherit;
-  color: white;
+  color: var(--white);
   padding: 1.5em;
   display: flex;
   justify-content: space-between;
