--- a/public/styles/media-queries.css
+++ b/public/styles/media-queries.css
@@ -1,8 +1,9 @@
+
+/* for desktops and large screens */
 @media only screen and (min-width: 992px) {
   body {
     display: flex;
     flex-wrap: wrap;
-    /* align-items: stretch; */
   }
 
   body > nav {
@@ -41,6 +42,7 @@
     bottom: 0;
   }
 
+  /* we won't hide the new-tweet form in the desktop version */
   .new-tweet {
     padding-top: 0;
     visibility: visible;
